crates/scry-chart/tests/snapshots/render_tests__render_line_diagonal_ticks.snap
---
source: crates/scry-chart/tests/render_tests.rs
expression: summarize(&rendered)
---
canvas: 400x300, 33 commands
text_labels: 12
  [0] 1
  [1] 2
  [2] 3
  [3] 4
  [4] 5
  [5] 6
  [6] 0.0
  [7] 2.5
  [8] 5.0
  [9] 7.5
  [10] 9.0
  [11] Diagonal Ticks
