crates/scry-chart/tests/snapshots/render_tests__render_line_filled_with_points.snap
---
source: crates/scry-chart/tests/render_tests.rs
expression: summarize(&rendered)
---
canvas: 400x300, 36 commands
text_labels: 11
  [0] 1
  [1] 2
  [2] 3
  [3] 4
  [4] 5
  [5] 0.0
  [6] 2.5
  [7] 5.0
  [8] 7.5
  [9] 9.0
  [10] Filled Line
