crates/scry-chart/tests/snapshots/render_tests__render_line_gap_filled.snap
---
source: crates/scry-chart/tests/render_tests.rs
expression: summarize(&rendered)
---
canvas: 400x300, 43 commands
text_labels: 13
  [0] 0
  [1] 1
  [2] 2
  [3] 3
  [4] 4
  [5] 5
  [6] 1
  [7] 2
  [8] 4
  [9] 6
  [10] 8
  [11] 9
  [12] Gap Filled
