crates/scry-chart/tests/snapshots/render_tests__render_line_gap_interpolate.snap
---
source: crates/scry-chart/tests/render_tests.rs
expression: summarize(&rendered)
---
canvas: 400x300, 27 commands
overlays: 12
  [0] (36, 278) Center "0"
  [1] (106, 278) Center "1"
  [2] (177, 278) Center "2"
  [3] (247, 278) Center "3"
  [4] (318, 278) Center "4"
  [5] (388, 278) Center "5"
  [6] (31, 273) Right "0.0"
  [7] (31, 206) Right "2.5"
  [8] (31, 138) Right "5.0"
  [9] (31, 70) Right "7.5"
  [10] (31, 30) Right "9.0"
  [11] (212, 16) Center "Gap Interpolate"
