crates/scry-chart/tests/snapshots/render_tests__render_line_legend_text_rendered.snap
---
source: crates/scry-chart/tests/render_tests.rs
expression: summarize(&rendered)
---
canvas: 500x350, 39 commands
text_labels: 14
  [0] 0.5
  [1] 1.0
  [2] 1.5
  [3] 2.0
  [4] 2.5
  [5] 3.0
  [6] 10
  [7] 20
  [8] 40
  [9] 60
  [10] 70
  [11] Temp
  [12] Humidity
  [13] Legend Text Check
