crates/scry-chart/tests/snapshots/render_tests__render_line_multi_series.snap
---
source: crates/scry-chart/tests/render_tests.rs
expression: summarize(&rendered)
---
canvas: 500x350, 41 commands
text_labels: 13
  [0] 0
  [1] 1
  [2] 2
  [3] 3
  [4] 4
  [5] 0.8
  [6] 2.0
  [7] 4.0
  [8] 6.0
  [9] Alpha
  [10] Beta
  [11] Gamma
  [12] Multi-Series
